# battle-game

./: .gitignore  LICENSE  README.md  cloudbuild.yaml  docker-compose.yaml  package.json
.github/workflows/: js.yml  rust.yml
backend/: Cargo.toml  Dockerfile  config-docker.json
backend/src/: appstate.rs  auth.rs  communicator.rs  config.rs  database.rs  errors.rs  game.rs  game_server.rs  helpers.rs  main.rs  routes.rs  socket.rs  websocket.rs
backend/src/api/: common.rs  inner.rs  mod.rs  request.rs  response.rs
backend/src/fixtures/: content.rs  grid.rs  hex.rs  mod.rs  unit.rs  wall.rs
backend/src/game_objects/: cell.rs  content.rs  grid.rs  hex.rs  mod.rs  unit.rs
backend/src/game_objects/hex_objects/: content.rs  mod.rs  wall.rs
backend/src/handlers/: health.rs  user.rs
backend/src/models/: user.rs
frontend/: .env  Dockerfile  babel.config.js  game.js  grid.js  helpers.js  index.html  package.json  script.js  unit.js  webpack.config-docker.js  webpack.config.js
frontend/src/: game.js  grid.js  helpers.js  index.js  unit.js
frontend/tests/: grid.test.js
