[package]
name = "backend"
version = "0.1.0"
authors = ["Voronwe Sul <voronwe.s@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0"
actix-web = "2.0"
actix-web-actors = "2.0"
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
serde = "1.0"
