[package]
name = "backend"
version = "0.1.0"
authors = ["Voronwe Sul <voronwe.s@protonmail.com>", "Hairash <maslevian@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "1.0"
actix-web = "3.1"
actix-web-actors = "3.0"
argon2rs = "0.2.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde_json = "1.0"
serde = "1.0"
lazy_static = "1.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.7"
eyre = "0.6"
color-eyre = "0.5"
thiserror = "1.0"
tracing = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"